# SGFM

./: .env  .gitignore  README.md  pyproject.toml  setup_uv.sh  sgfm.yml
conf/: default.yaml
conf/data/: alex_mp_20.yaml  carbon.yaml  mp_20.yaml  mpts_52.yaml  perov.yaml
conf/logging/: basic.yaml  default.yaml
conf/model/: sgfm.yaml
conf/model/flow_model/: flow_model.yaml
conf/optim/: default.yaml
conf/train/: default.yaml
data/: process.py
data/alex_mp_20/: README.md  split.py  test_ids.txt
scripts/: crystal_pkl.py  crystal_pkl.sh  data_setup.py  data_setup.sh  eval.sh  run_csp.sh  run_dng.sh
src/sgfm/: __init__.py  model_eval.py  run.py
src/sgfm/common/: data_utils.py  eval_utils.py  metrics.py
src/sgfm/pl_data/: datamodule.py  dataset.py
src/sgfm/pl_modules/: flow_model.py  sgfm_model.py
src/sgfm/pl_modules/lattice/: crystal_family.py
