[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "sgfm"
version = "0.0.0"
authors = [
  { name="Omri Puny, Yaron Lipman, Benjamin Kurt Miller", email="" },
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/omri1348/SGFM"

[tool.hatch.build.targets.wheel]
packages = ["src/sgfm"]
