[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "sgfm"
version = "0.0.0"
authors = [
  { name="Omri Puny, Yaron Lipman, Benjamin Kurt Miller", email="" },
]
description = "Structure-Guided Flow Model for crystal structure generation"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Core scientific computing
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "matplotlib",
    "plotly>=6.3.0",
    "networkx>=3.2.1,<3.3",
    
    # PyTorch ecosystem (installed separately in setup script)
    # "torch>=2.1.0",
    # "torchvision>=0.16.0", 
    # "torchaudio>=2.1.0",
    # "torch-geometric>=2.5.0",
    
    # PyTorch Lightning and related
    "pytorch-lightning>=2.0.0",
    "torchmetrics>=1.1.0",
    "lightning-utilities>=0.9.0",
    
    # Configuration and utilities
    "omegaconf>=2.3.0",
    "hydra-core",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    
    # Materials science
    "ase>=3.25.0",
    "pymatgen>=2024.4.0",
    "spglib>=2.4.0",
    "pyxtal>=0.6.0",
    "smact>=2.5.0",
    "matminer>=0.9.0",
    
    # Chemistry and structure analysis
    "chemparse>=0.3.0",
    "uncertainties>=3.1.0",
    "symd>=1.1.0",
    
    # Jupyter and notebook support
    "jupyter",
    "notebook>=7.3.0",
    "ipywidgets",
    "nglview>=3.1.0",
    
    # Monitoring and experiment tracking
    "wandb>=0.16.0",
    "tensorboard",
    
    # Numerical optimization
    "torchdiffeq>=0.2.5",
    
    # Utilities
    "joblib>=1.4.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "pillow>=10.3.0",
    "python-dotenv>=1.0.0",
    "setproctitle>=1.3.0",
    
    # Parallel processing
    "p_tqdm>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/omri1348/SGFM"

[tool.hatch.build.targets.wheel]
packages = ["src/sgfm"]
