[project]
name = "sgfm"
version = "0.0.0"
authors = [
  { name="Omri Puny, Yaron Lipman, Benjamin Kurt Miller", email="" },
]
description = "Structure-Guided Flow Model for crystal structure generation"
readme = "README.md"
requires-python = ">=3.10,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Core scientific computing
    "numpy>=1.26.0,<2.0",
    "scipy>=1.13.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "matplotlib",
    "plotly>=6.3.0",
    "networkx>=3.2.1,<3.3",
    # torch
    "torch==2.1.0",
    "torch-geometric>=2.5.0",
    "torch-scatter",
    "torch-sparse",
    # PyTorch Lightning and related
    "pytorch-lightning==2.0",
    "torchmetrics>=1.1.0",
    "lightning-utilities>=0.9.0",
    # Configuration and utilities
    "omegaconf>=2.3.0",
    "hydra-core",
    "hydra-submitit-launcher",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    # Materials science
    "ase>=3.25.0",
    "pymatgen>=2024.4.0",
    "spglib>=2.4.0",
    "pyxtal>=0.6.0",
    "smact>=2.5.0",
    "matminer>=0.9.0",
    # Chemistry and structure analysis
    "chemparse>=0.3.0",
    "uncertainties>=3.1.0",
    "symd>=1.1.0",
    # Jupyter and notebook support
    "jupyter",
    "notebook>=7.3.0",
    "ipywidgets",
    "nglview>=3.1.0",
    # Monitoring and experiment tracking
    "wandb>=0.16.0",
    "tensorboard",
    # Numerical optimization
    "torchdiffeq>=0.2.5",
    # Utilities
    "joblib>=1.4.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "pillow>=10.3.0",
    "python-dotenv>=1.0.0",
    "setproctitle>=1.3.0",
    # Parallel processing
    "p_tqdm>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/omri1348/SGFM"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
torch-scatter = [
  { index = "pyg-cu118" }
]
torch-sparse = [
  { index = "pyg-cu118" }
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pyg-cu118"
url = "https://data.pyg.org/whl/torch-2.1.0+cu118.html"
explicit = true
format = "flat"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
